Changelog
=========

1.0 (unreleased)
------------------

- Plone: Fix <style> / <link> order mixing
  [laulaz]
- Bootstrap: handle error fields for z3cforms.
  [davidjb]
- Bootstrap: convert ``submit-widget`` input buttons into primary buttons.
  [davidjb]
- Fix randomly broken html due to subrequest on relative paths (returning None)
  [laulaz]
- Bootstrap: only a text class add to ``span.required`` elements. Previously,
  form fields wrapped in such an element were removed.
  [davidjb]
- Plone: fix keywords not displaying [laulaz]
- Plone: fix xpath expression to work correctly with description and document by line
- Plone: change xpath expression to correctly show description
- Plone: Change the viewport meta tag to set zoom correctly on low resolution
  mobile devices.
  [luca-bellenghi]
- Plone: Fix portal-column-content, portal-column-one and portal-column-two
  margin left in mobile low resolution.
  [luca-bellenghi]
- Plone: Fix global nav wrapper height calculation; we had problem due to
  different globalnav height  when rotating device.
  [luca-bellenghi]
- Plone: Fix live search results width (too large on small resolution devices).
- Plone: Fix z-index problem with live search results and menu bar.
  [luca-bellenghi]
- Plone: Made responsive tables in “text” field.
  [luca-bellenghi]
- Plone: Made responsive images.
  [luca-bellenghi]
- Plone: Fix login overlay dimension
  [luca-bellenghi]
- Plone: Fix globalnavigation menu (duplicated ids)
  [luca-bellenghi]
- Bootstrap: allow Plone custom CSS to pass into themed pages. This allows
  for theme customisation TTW for simple changes required.
  [davidjb]
- Bootstrap: improve form field styles for table radio listings.
  [davidjb]
- Goldilocks: fix missing columns.xml file
  [laulaz]
- Bootstrap: improve form layout for different checkbox/radio
  input fields.
  [davidjb]
- Bootstrap: update themes with fixes for Plone-related views and
  different AJAX views.
  [davidjb]