@@ -11,9 +11,9 @@
 	<link rel="stylesheet" type="text/css" href="../../css/master.css" />	
 	
 	<!--[if lt IE 9]>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->		
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+	<![endif]-->
+
 </head>
 <body>
 
