@@ -12,8 +12,8 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>	
 	
 	<!--[if lt IE 9]>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->		
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+	<![endif]-->
 
 </head>
 <body>
